# mybibliotheca

./: .dockerignore  .env.example  .gitignore  ADMIN_TOOLS.md  AUTHENTICATION.md  CROSS_PLATFORM.md  DEPLOYMENT.md  Dockerfile  LICENSE  MIGRATION.md  MULTI_USER_PROJECT_PLAN.md  RATE_LIMITING.md  README.md  TESTING.md  admin_tools.py  config.py  cookies.txt  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  documentation.md  migrate_db.py  migrate_db_schema.py  migrate_security_features.py  migrate_to_multi_user.py  migrate_user_security.py  pyproject.toml  requirements.txt  run.py  setup_data_dir.bat  setup_data_dir.py  setup_db.py  test-docker.sh  test_rate_limiting.py  validate_migration.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: issue-to-discord.yml  new-commit.yml
app/: __init__.py  admin.py  auth.py  debug_utils.py  forms.py  models.py  okfinaltest  routes.py  utils.py
app/static/: manifest.json
app/templates/: add_book.html  base.html  bulk_import.html  community_activity.html  edit_book.html  gittestsinghey  index.html  library.html  month_wrapup_empty.html  public_library.html  search_books.html  task_list.html  task_status.html  user_profile.html  view_book.html
app/templates/admin/: dashboard.html  reset_password.html  settings.html  user_detail.html  users.html
app/templates/auth/: change_password.html  forced_password_change.html  login.html  my_activity.html  privacy_settings.html  profile.html  register.html  (+1 more)
test_files/: test_bulk_import_upcs.csv
tests/: __init__.py  conftest.py  test_auth.py  test_models.py
(+4 files in other folders)
